set proto_grpc's copy_files to false
As expected, it break type hints in the IDE

--- a/examples/proto_grpc/BUILD.bazel
+++ b/examples/proto_grpc/BUILD.bazel
@@ -23,6 +23,7 @@ ts_proto_library(
     proto = ":logger_proto",
     visibility = ["//visibility:public"],
     deps = ["//examples/connect_node/proto"],
+    copy_files = False,
 )
 
 ts_project(
