add tsconfig path alias for the workspace
This adds type hints back to the IDE but breaks builds
which is unexpected (to me).

--- a/examples/react/tsconfig.json
+++ b/examples/react/tsconfig.json
@@ -22,6 +22,10 @@
           "./*",
           // Used in the IDE for type hints. The root is at `/`.
           "./src/*"
+      ],
+      "~/*": [
+        "../../*", // Used in builds. The root should be inside bazel-out/examples/react
+        "../../bazel-out/k8-fastbuild/bin/*" // Use for IDE type resolution.
       ]
 	}
   },
